[gd_scene load_steps=9 format=2]

[ext_resource path="res://interface/kenney_pixel_ui/space.png" type="Texture" id=1]
[ext_resource path="res://core/utils/KeyLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://interface/kenney_pixel_ui/Colored/red.png" type="Texture" id=3]
[ext_resource path="res://interface/kenney_pixel_ui/space_inlay.png" type="Texture" id=4]
[ext_resource path="res://items/gold_collectables/gold_coin.png" type="Texture" id=5]
[ext_resource path="res://interface/themes/General.tres" type="Theme" id=6]
[ext_resource path="res://items/Inventory.gd" type="Script" id=7]
[ext_resource path="res://items/ItemButton.tscn" type="PackedScene" id=8]

[node name="Inventory" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 6 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
item_button = ExtResource( 8 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 64.0
margin_right = -64.0
margin_bottom = -64.0
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 96.0
margin_top = 64.0
margin_right = -96.0
margin_bottom = -64.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="HBoxContainer" parent="Background/VBoxContainer"]
margin_right = 1600.0
margin_bottom = 68.0
mouse_filter = 2

[node name="KeyLabel" parent="Background/VBoxContainer/Header" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1528.0
margin_bottom = 68.0
size_flags_horizontal = 3
text = "INVENTORY"
align = 1

[node name="CloseButton" type="TextureButton" parent="Background/VBoxContainer/Header"]
margin_left = 1532.0
margin_right = 1600.0
margin_bottom = 68.0
rect_min_size = Vector2( 68, 68 )
texture_normal = ExtResource( 3 )
expand = true

[node name="MainElements" type="HBoxContainer" parent="Background/VBoxContainer"]
margin_top = 72.0
margin_right = 1600.0
margin_bottom = 824.0
mouse_filter = 2
size_flags_vertical = 3

[node name="Tabs" type="VBoxContainer" parent="Background/VBoxContainer/MainElements"]
margin_right = 256.0
margin_bottom = 752.0
rect_min_size = Vector2( 256, 0 )
mouse_filter = 2
custom_constants/separation = 8

[node name="Weapons" type="TextureButton" parent="Background/VBoxContainer/MainElements/Tabs"]
margin_right = 256.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
mouse_filter = 2
texture_normal = ExtResource( 4 )
expand = true

[node name="KeyLabel" parent="Background/VBoxContainer/MainElements/Tabs/Weapons" instance=ExtResource( 2 )]
text = "WEAPONS"
align = 1
valign = 1

[node name="Armor" type="TextureButton" parent="Background/VBoxContainer/MainElements/Tabs"]
margin_top = 88.0
margin_right = 256.0
margin_bottom = 168.0
rect_min_size = Vector2( 0, 80 )
mouse_filter = 2
texture_normal = ExtResource( 4 )
expand = true

[node name="KeyLabel" parent="Background/VBoxContainer/MainElements/Tabs/Armor" instance=ExtResource( 2 )]
text = "ARMOR"
align = 1
valign = 1

[node name="Crafting" type="TextureButton" parent="Background/VBoxContainer/MainElements/Tabs"]
margin_top = 176.0
margin_right = 256.0
margin_bottom = 256.0
rect_min_size = Vector2( 0, 80 )
mouse_filter = 2
texture_normal = ExtResource( 4 )
expand = true

[node name="KeyLabel" parent="Background/VBoxContainer/MainElements/Tabs/Crafting" instance=ExtResource( 2 )]
text = "CRAFTING"
align = 1
valign = 1

[node name="Consumables" type="TextureButton" parent="Background/VBoxContainer/MainElements/Tabs"]
margin_top = 264.0
margin_right = 256.0
margin_bottom = 344.0
rect_min_size = Vector2( 0, 80 )
mouse_filter = 2
texture_normal = ExtResource( 4 )
expand = true

[node name="KeyLabel" parent="Background/VBoxContainer/MainElements/Tabs/Consumables" instance=ExtResource( 2 )]
text = "CONSUMABLES"
align = 1
valign = 1

[node name="Other" type="TextureButton" parent="Background/VBoxContainer/MainElements/Tabs"]
margin_top = 352.0
margin_right = 256.0
margin_bottom = 432.0
rect_min_size = Vector2( 0, 80 )
mouse_filter = 2
texture_normal = ExtResource( 4 )
expand = true

[node name="KeyLabel" parent="Background/VBoxContainer/MainElements/Tabs/Other" instance=ExtResource( 2 )]
text = "OTHER"
align = 1
valign = 1

[node name="Gold" type="HBoxContainer" parent="Background/VBoxContainer/MainElements/Tabs"]
margin_top = 440.0
margin_right = 256.0
margin_bottom = 568.0
rect_min_size = Vector2( 0, 128 )
mouse_filter = 2

[node name="GoldIcon" type="TextureRect" parent="Background/VBoxContainer/MainElements/Tabs/Gold"]
margin_right = 128.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 0 )
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 1

[node name="KeyLabel" parent="Background/VBoxContainer/MainElements/Tabs/Gold" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 132.0
margin_top = 30.0
margin_right = 256.0
margin_bottom = 98.0
size_flags_horizontal = 3
text = "69420"

[node name="Weapons" type="ScrollContainer" parent="Background/VBoxContainer/MainElements"]
margin_left = 260.0
margin_right = 1176.0
margin_bottom = 752.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Background/VBoxContainer/MainElements/Weapons"]
margin_right = 916.0
margin_bottom = 752.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Armor" type="ScrollContainer" parent="Background/VBoxContainer/MainElements"]
visible = false
margin_left = 720.0
margin_right = 1176.0
margin_bottom = 752.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Background/VBoxContainer/MainElements/Armor"]
margin_right = 456.0
margin_bottom = 752.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Crafting" type="ScrollContainer" parent="Background/VBoxContainer/MainElements"]
visible = false
margin_left = 490.0
margin_right = 716.0
margin_bottom = 752.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Background/VBoxContainer/MainElements/Crafting"]
margin_right = 226.0
margin_bottom = 752.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Consumables" type="ScrollContainer" parent="Background/VBoxContainer/MainElements"]
visible = false
margin_left = 566.0
margin_right = 868.0
margin_bottom = 752.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Background/VBoxContainer/MainElements/Consumables"]
margin_right = 302.0
margin_bottom = 752.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Other" type="ScrollContainer" parent="Background/VBoxContainer/MainElements"]
visible = false
margin_left = 720.0
margin_right = 1176.0
margin_bottom = 752.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Background/VBoxContainer/MainElements/Other"]
margin_right = 456.0
margin_bottom = 752.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemInspector" type="VBoxContainer" parent="Background/VBoxContainer/MainElements"]
margin_left = 1180.0
margin_right = 1600.0
margin_bottom = 752.0
rect_min_size = Vector2( 420, 0 )
mouse_filter = 2
custom_constants/separation = 16

[node name="ItemInspector1" type="VBoxContainer" parent="Background/VBoxContainer/MainElements/ItemInspector"]
margin_right = 420.0
margin_bottom = 292.0
mouse_filter = 2
size_flags_vertical = 3

[node name="ItemNameLabel" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector1" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 420.0
margin_bottom = 68.0
text = "ITEM_NAME"

[node name="HBoxContainer" type="HBoxContainer" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector1"]
margin_top = 72.0
margin_right = 420.0
margin_bottom = 292.0
mouse_filter = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector1/HBoxContainer"]
margin_right = 352.0
margin_bottom = 220.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Stats" type="VBoxContainer" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector1/HBoxContainer/ScrollContainer"]
margin_right = 352.0
margin_bottom = 220.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Attack" type="HBoxContainer" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector1/HBoxContainer/ScrollContainer/Stats"]
margin_right = 352.0
margin_bottom = 68.0
mouse_filter = 2

[node name="StatNameLabel" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector1/HBoxContainer/ScrollContainer/Stats/Attack" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 66.0
margin_bottom = 68.0
text = "ATK"

[node name="StatValueLabel" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector1/HBoxContainer/ScrollContainer/Stats/Attack" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 70.0
margin_right = 352.0
margin_bottom = 68.0
size_flags_horizontal = 3
text = "42069"
align = 2

[node name="ItemIcon" type="TextureRect" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector1/HBoxContainer"]
margin_left = 356.0
margin_right = 420.0
margin_bottom = 220.0
rect_min_size = Vector2( 64, 64 )
mouse_filter = 2
expand = true

[node name="ItemInspector2" type="VBoxContainer" parent="Background/VBoxContainer/MainElements/ItemInspector"]
margin_top = 308.0
margin_right = 420.0
margin_bottom = 600.0
mouse_filter = 2
size_flags_vertical = 3

[node name="ItemNameLabel" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 420.0
margin_bottom = 68.0
text = "ITEM_NAME"

[node name="HBoxContainer" type="HBoxContainer" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector2"]
margin_top = 72.0
margin_right = 420.0
margin_bottom = 292.0
mouse_filter = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector2/HBoxContainer"]
margin_right = 352.0
margin_bottom = 220.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Stats" type="VBoxContainer" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector2/HBoxContainer/ScrollContainer"]
margin_right = 352.0
margin_bottom = 220.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Attack" type="HBoxContainer" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector2/HBoxContainer/ScrollContainer/Stats"]
margin_right = 352.0
margin_bottom = 68.0
mouse_filter = 2

[node name="StatNameLabel" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector2/HBoxContainer/ScrollContainer/Stats/Attack" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 66.0
margin_bottom = 68.0
text = "ATK"

[node name="StatValueLabel" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector2/HBoxContainer/ScrollContainer/Stats/Attack" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 70.0
margin_right = 352.0
margin_bottom = 68.0
size_flags_horizontal = 3
text = "42069"
align = 2

[node name="ItemIcon" type="TextureRect" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector2/HBoxContainer"]
margin_left = 356.0
margin_right = 420.0
margin_bottom = 220.0
rect_min_size = Vector2( 64, 64 )
mouse_filter = 2
expand = true

[node name="Margin" type="Control" parent="Background/VBoxContainer/MainElements/ItemInspector"]
margin_top = 616.0
margin_right = 420.0
margin_bottom = 636.0
rect_min_size = Vector2( 0, 20 )
mouse_filter = 2

[node name="Buttons" type="HBoxContainer" parent="Background/VBoxContainer/MainElements/ItemInspector"]
margin_top = 652.0
margin_right = 420.0
margin_bottom = 752.0
mouse_filter = 2

[node name="TrashBin" type="TextureButton" parent="Background/VBoxContainer/MainElements/ItemInspector/Buttons"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
mouse_filter = 2
texture_normal = ExtResource( 3 )
expand = true

[node name="Compare" type="TextureButton" parent="Background/VBoxContainer/MainElements/ItemInspector/Buttons"]
margin_left = 104.0
margin_top = 10.0
margin_right = 420.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 80 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 4
texture_normal = ExtResource( 4 )
expand = true

[node name="KeyLabel" parent="Background/VBoxContainer/MainElements/ItemInspector/Buttons/Compare" instance=ExtResource( 2 )]
text = "COMPARE"
align = 1
valign = 1
[connection signal="button_down" from="Background/VBoxContainer/Header/CloseButton" to="." method="_on_CloseButton_button_down"]
